// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regexp parser works for (?:a)+? 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 12,
              'children': [
                {
                  'symbol': 'Group',
                  'type': 'symbol',
                  'ruleIndex': 15,
                  'children': [
                    {
                      'type': 'token',
                      'text': '(',
                      'token': '(',
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2
                    },
                    {
                      'type': 'token',
                      'text': '?:',
                      'token': '?:',
                      'start': 1,
                      'end': 3,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 4
                    },
                    {
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'ruleIndex': 6,
                      'children': [
                        {
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'ruleIndex': 10,
                          'children': [
                            {
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'ruleIndex': 11,
                              'children': [
                                {
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'ruleIndex': 27,
                                  'children': [
                                    {
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'ruleIndex': 30,
                                      'children': [
                                        {
                                          'type': 'token',
                                          'text': 'a',
                                          'token': 'char',
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5
                                        }
                                      ],
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    },
                    {
                      'type': 'token',
                      'text': ')',
                      'token': ')',
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6
                    },
                    {
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'ruleIndex': 53,
                      'children': [
                        {
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'ruleIndex': 55,
                          'children': [
                            {
                              'type': 'token',
                              'text': '+',
                              'token': '+',
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7
                            }
                          ],
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7
                        },
                        {
                          'type': 'token',
                          'text': '?',
                          'token': 'OPTIONAL',
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8
                        }
                      ],
                      'start': 5,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 8
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for (?<a>c)b 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 12,
              'children': [
                {
                  'symbol': 'Group',
                  'type': 'symbol',
                  'ruleIndex': 18,
                  'children': [
                    {
                      'type': 'token',
                      'text': 'a',
                      'token': 'namedGroupPrefix',
                      'start': 0,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 6
                    },
                    {
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'ruleIndex': 6,
                      'children': [
                        {
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'ruleIndex': 10,
                          'children': [
                            {
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'ruleIndex': 11,
                              'children': [
                                {
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'ruleIndex': 27,
                                  'children': [
                                    {
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'ruleIndex': 30,
                                      'children': [
                                        {
                                          'type': 'token',
                                          'text': 'c',
                                          'token': 'char',
                                          'start': 5,
                                          'end': 6,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 6,
                                          'lastColumn': 7
                                        }
                                      ],
                                      'start': 5,
                                      'end': 6,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 6,
                                      'lastColumn': 7
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    },
                    {
                      'type': 'token',
                      'text': ')',
                      'token': ')',
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8
                    }
                  ],
                  'start': 0,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 8
                }
              ]
            },
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 30,
                      'children': [
                        {
                          'type': 'token',
                          'text': 'b',
                          'token': 'char',
                          'start': 7,
                          'end': 8,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 8,
                          'lastColumn': 9
                        }
                      ],
                      'start': 7,
                      'end': 8,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 8,
                      'lastColumn': 9
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for (a|b)*z 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 12,
              'children': [
                {
                  'symbol': 'Group',
                  'type': 'symbol',
                  'ruleIndex': 15,
                  'children': [
                    {
                      'type': 'token',
                      'text': '(',
                      'token': '(',
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2
                    },
                    {
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'ruleIndex': 6,
                      'children': [
                        {
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'ruleIndex': 10,
                          'children': [
                            {
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'ruleIndex': 11,
                              'children': [
                                {
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'ruleIndex': 27,
                                  'children': [
                                    {
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'ruleIndex': 30,
                                      'children': [
                                        {
                                          'type': 'token',
                                          'text': 'a',
                                          'token': 'char',
                                          'start': 1,
                                          'end': 2,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 3
                                        }
                                      ],
                                      'start': 1,
                                      'end': 2,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 2,
                                      'lastColumn': 3
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        },
                        {
                          'type': 'token',
                          'text': '|',
                          'token': '|',
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4
                        },
                        {
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'ruleIndex': 10,
                          'children': [
                            {
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'ruleIndex': 11,
                              'children': [
                                {
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'ruleIndex': 27,
                                  'children': [
                                    {
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'ruleIndex': 30,
                                      'children': [
                                        {
                                          'type': 'token',
                                          'text': 'b',
                                          'token': 'char',
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5
                                        }
                                      ],
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    },
                    {
                      'type': 'token',
                      'text': ')',
                      'token': ')',
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6
                    },
                    {
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'ruleIndex': 53,
                      'children': [
                        {
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'ruleIndex': 54,
                          'children': [
                            {
                              'type': 'token',
                              'text': '*',
                              'token': '*',
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7
                            }
                          ],
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7
                        }
                      ]
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            },
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 30,
                      'children': [
                        {
                          'type': 'token',
                          'text': 'z',
                          'token': 'char',
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8
                        }
                      ],
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for [^a-z] 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 29,
                      'children': [
                        {
                          'symbol': 'MatchCharacterClass',
                          'type': 'symbol',
                          'ruleIndex': 31,
                          'children': [
                            {
                              'symbol': 'CharacterGroup',
                              'type': 'symbol',
                              'ruleIndex': 35,
                              'children': [
                                {
                                  'type': 'token',
                                  'text': '[',
                                  'token': '[',
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2
                                },
                                {
                                  'type': 'token',
                                  'text': '^',
                                  'token': '^',
                                  'start': 1,
                                  'end': 2,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 3
                                },
                                {
                                  'symbol': 'CharacterGroupInner',
                                  'type': 'symbol',
                                  'ruleIndex': 39,
                                  'children': [
                                    {
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'ruleIndex': 41,
                                      'children': [
                                        {
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'ruleIndex': 50,
                                          'children': [
                                            {
                                              'type': 'token',
                                              'text': 'a',
                                              'token': 'char',
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4
                                            },
                                            {
                                              'type': 'token',
                                              'text': '-',
                                              'token': '-',
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5
                                            },
                                            {
                                              'type': 'token',
                                              'text': 'z',
                                              'token': 'char',
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6
                                            }
                                          ],
                                          'start': 2,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 3,
                                          'lastColumn': 6
                                        }
                                      ]
                                    }
                                  ]
                                },
                                {
                                  'type': 'token',
                                  'text': ']',
                                  'token': ']',
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7
                                }
                              ],
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for [a-z] 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 29,
                      'children': [
                        {
                          'symbol': 'MatchCharacterClass',
                          'type': 'symbol',
                          'ruleIndex': 31,
                          'children': [
                            {
                              'symbol': 'CharacterGroup',
                              'type': 'symbol',
                              'ruleIndex': 35,
                              'children': [
                                {
                                  'type': 'token',
                                  'text': '[',
                                  'token': '[',
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2
                                },
                                {
                                  'symbol': 'CharacterGroupInner',
                                  'type': 'symbol',
                                  'ruleIndex': 39,
                                  'children': [
                                    {
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'ruleIndex': 41,
                                      'children': [
                                        {
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'ruleIndex': 50,
                                          'children': [
                                            {
                                              'type': 'token',
                                              'text': 'a',
                                              'token': 'char',
                                              'start': 1,
                                              'end': 2,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 2,
                                              'lastColumn': 3
                                            },
                                            {
                                              'type': 'token',
                                              'text': '-',
                                              'token': '-',
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4
                                            },
                                            {
                                              'type': 'token',
                                              'text': 'z',
                                              'token': 'char',
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5
                                            }
                                          ],
                                          'start': 1,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 5
                                        }
                                      ]
                                    },
                                    {
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'ruleIndex': 41,
                                      'children': [
                                        {
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'ruleIndex': 50,
                                          'children': [
                                            {
                                              'type': 'token',
                                              'text': '\\\\b',
                                              'token': 'char',
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6
                                            }
                                          ],
                                          'start': 4,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 5,
                                          'lastColumn': 6
                                        }
                                      ]
                                    }
                                  ]
                                },
                                {
                                  'type': 'token',
                                  'text': ']',
                                  'token': ']',
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7
                                }
                              ],
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for \\12\\b 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 14,
              'children': [
                {
                  'type': 'token',
                  'text': '\\\\\\\\12',
                  'token': 'backreference',
                  'start': 0,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 4
                }
              ],
              'start': 0,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 4
            },
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 13,
              'children': [
                {
                  'symbol': 'Anchor',
                  'type': 'symbol',
                  'ruleIndex': 62,
                  'children': [
                    {
                      'type': 'token',
                      'text': '\\\\\\\\b',
                      'token': 'anchorWordBoundary',
                      'start': 3,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 6
                    }
                  ],
                  'start': 3,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 4,
                  'lastColumn': 6
                }
              ]
            }
          ],
          'start': 0,
          'firstLine': 1,
          'firstColumn': 1
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for ^a+z$ 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 1,
  'children': [
    {
      'type': 'token',
      'text': '^',
      'token': '^',
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2
    },
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 30,
                      'children': [
                        {
                          'type': 'token',
                          'text': 'a',
                          'token': 'char',
                          'start': 1,
                          'end': 2,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 3
                        }
                      ],
                      'start': 1,
                      'end': 2,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 3
                    },
                    {
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'ruleIndex': 53,
                      'children': [
                        {
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'ruleIndex': 55,
                          'children': [
                            {
                              'type': 'token',
                              'text': '+',
                              'token': '+',
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4
                            }
                          ],
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4
                        }
                      ]
                    }
                  ],
                  'start': 1,
                  'firstLine': 1,
                  'firstColumn': 2
                }
              ]
            },
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 30,
                      'children': [
                        {
                          'type': 'token',
                          'text': 'z',
                          'token': 'char',
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5
                        }
                      ],
                      'start': 3,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 5
                    }
                  ]
                }
              ]
            },
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 13,
              'children': [
                {
                  'symbol': 'Anchor',
                  'type': 'symbol',
                  'ruleIndex': 68,
                  'children': [
                    {
                      'type': 'token',
                      'text': '$',
                      'token': '$',
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6
                    }
                  ],
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6
                }
              ]
            }
          ]
        }
      ]
    }
  ],
  'start': 0,
  'firstLine': 1,
  'firstColumn': 1
}"
`;

exports[`regexp parser works for a{1,2} 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 30,
                      'children': [
                        {
                          'type': 'token',
                          'text': 'a',
                          'token': 'char',
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2
                        }
                      ],
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2
                    },
                    {
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'ruleIndex': 53,
                      'children': [
                        {
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'ruleIndex': 58,
                          'children': [
                            {
                              'type': 'token',
                              'text': '{',
                              'token': '{',
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3
                            },
                            {
                              'type': 'token',
                              'text': '1',
                              'token': 'int',
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4
                            },
                            {
                              'type': 'token',
                              'text': ',',
                              'token': ',',
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5
                            },
                            {
                              'type': 'token',
                              'text': '2',
                              'token': 'int',
                              'start': 4,
                              'end': 5,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 5,
                              'lastColumn': 6
                            },
                            {
                              'type': 'token',
                              'text': '}',
                              'token': '}',
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7
                            }
                          ],
                          'start': 1,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 7
                        }
                      ]
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for a{1} 1`] = `
"{
  'symbol': 'Regexp',
  'type': 'symbol',
  'ruleIndex': 2,
  'children': [
    {
      'symbol': 'Expression',
      'type': 'symbol',
      'ruleIndex': 6,
      'children': [
        {
          'symbol': 'SubExpression',
          'type': 'symbol',
          'ruleIndex': 10,
          'children': [
            {
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'ruleIndex': 11,
              'children': [
                {
                  'symbol': 'Match',
                  'type': 'symbol',
                  'ruleIndex': 27,
                  'children': [
                    {
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'ruleIndex': 30,
                      'children': [
                        {
                          'type': 'token',
                          'text': 'a',
                          'token': 'char',
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2
                        }
                      ],
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2
                    },
                    {
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'ruleIndex': 53,
                      'children': [
                        {
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'ruleIndex': 58,
                          'children': [
                            {
                              'type': 'token',
                              'text': '{',
                              'token': '{',
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3
                            },
                            {
                              'type': 'token',
                              'text': '1',
                              'token': 'int',
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4
                            },
                            {
                              'type': 'token',
                              'text': '}',
                              'token': '}',
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5
                            }
                          ],
                          'start': 1,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 5
                        }
                      ]
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
